test/types/tuple/errors/tuple-init.bad
$CHPL_HOME/modules/standard/Regex.chpl:681: internal error: UTI-MIS-1049 chpl version 2.6.0 pre-release (e69472a1958)
Note: This source location is a guess.

Internal errors indicate a bug in the Chapel compiler,
and we're sorry for the hassle.  We would appreciate your reporting this bug --
please see https://chapel-lang.org/bugs.html for instructions.  In the meantime,
the filename + line number above may be useful in working around the issue.

